@@ -13,6 +13,7 @@ http://svn.edgewall.org/repos/babel/tags/0.9.3/
    is done for each line in a comment.
  * A JavaScript message extractor was added.
  * Updated to CLDR 1.5.1.
+ * Fixed timezone calculations when formatting datetime and time values.
 
 
 Version 0.9.2
